--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-F2HRNFGFXN"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-F2HRNFGFXN');
-</script>
-<!-- End Google Analytics -->
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Link Tracker — Pill View</title>
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jaykays Trackly — Home</title>
+
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="VqC6EhdAZWPPR-wuTA7CX-WJeOP1DcoMZTGvwCOrX4E" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
+  <!-- Preview / Social Share -->
+  <meta property="og:image" content="preview/preview-home.png" />
+  <meta name="description" content="Track your links easily with Jaykays Trackly.">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2HRNFGFXN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-F2HRNFGFXN');
+  </script>
+
+  <!-- Styles -->
   <style>
+    /* Keep your inline CSS from the home page here */
+  </style>
     :root{
       --brand-blue: #004aad;
       --brand-gold: #fbbf24;
