--- a/index.html
+++ b/index.html
@@ -23,12 +23,8 @@
     gtag('js', new Date());
     gtag('config', 'G-F2HRNFGFXN');
   </script>
-
-  <!-- Styles -->
-  <style>
-    /* Keep your inline CSS from the home page here */
-  </style>
-    :root{
+    <script>
+      :root{
       --brand-blue: #004aad;
       --brand-gold: #fbbf24;
       --pill-bg: #fff;
