--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Jaykays Trackly — Home</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Page Title -->
+  <title>Jaykays Trackly</title>
 
   <!-- Google Site Verification -->
   <meta name="google-site-verification" content="VqC6EhdAZWPPR-wuTA7CX-WJeOP1DcoMZTGvwCOrX4E" />
 
   <!-- Favicon -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" type="image/png" href="favicon.png" />
 
-  <!-- Preview / Social Share -->
-  <meta property="og:image" content="preview/preview-home.png" />
-  <meta name="description" content="Track your links easily with Jaykays Trackly.">
+  <!-- Social Preview -->
+  <meta property="og:title" content="Jaykays Trackly" />
+  <meta property="og:description" content="Track your links easily with Jaykays Trackly — Pill UI" />
+  <meta property="og:image" content="preview.png" />
+  <meta property="og:type" content="website" />
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2HRNFGFXN"></script>
@@ -21,6 +27,10 @@
     gtag('js', new Date());
     gtag('config', 'G-F2HRNFGFXN');
   </script>
+
+  <!-- Your CSS -->
+  <link rel="stylesheet" href="style.css">
+</head>
     <script>
       :root{
       --brand-blue: #004aad;
