--- a/index.html
+++ b/index.html
@@ -1,34 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ 
+<head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Page Title -->
-  <title>Jaykays Trackly</title>
-
-  <!-- Google Site Verification -->
-  <meta name="google-site-verification" content="VqC6EhdAZWPPR-wuTA7CX-WJeOP1DcoMZTGvwCOrX4E" />
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
-
-  <!-- Social Preview -->
-  <meta property="og:title" content="Jaykays Trackly" />
-  <meta property="og:description" content="Track your links easily with Jaykays Trackly — Pill UI" />
-  <meta property="og:image" content="preview.png" />
-  <meta property="og:type" content="website" />
-
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2HRNFGFXN"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-F2HRNFGFXN');
-  </script>
-
-
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Link Tracker — Pill View</title>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <script>
       :root{
       --brand-blue: #004aad;
