--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 
-<head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Link Tracker — Pill View</title>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-    <script>
-      :root{
+  <style>
+    :root{
       --brand-blue: #004aad;
       --brand-gold: #fbbf24;
       --pill-bg: #fff;
