--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   gtag('config', 'G-F2HRNFGFXN');
 </script>
 <!-- End Google Analytics -->
+ <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="VqC6EhdAZWPPR-wuTA7CX-WJeOP1DcoMZTGvwCOrX4E" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title> Trackly Home</title>
