--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 <!-- End Google Analytics -->
  <!-- Google Site Verification -->
   <meta name="google-site-verification" content="VqC6EhdAZWPPR-wuTA7CX-WJeOP1DcoMZTGvwCOrX4E" />
+<meta name="description" content="Trackly helps you extract domains, track link clicks, and view analytics in a simple dashboard. Fast, free, and easy to use." />
+<meta name="author" content="Trackly" />
+<meta name="robots" content="index, follow" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://jkaystrackler.netlify.app/" />
+<meta property="og:title" content="Trackly — Domain Extractor & Analytics Tool" />
+<meta property="og:description" content="Trackly helps you extract domains, track link clicks, and view analytics in a simple dashboard." />
+<meta property="og:image" content="https://jkaystrackler.netlify.app/preview.png" />
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:url" content="https://jkaystrackler.netlify.app/" />
+<meta name="twitter:title" content="Trackly — Domain Extractor & Analytics Tool" />
+<meta name="twitter:description" content="Trackly helps you extract domains, track link clicks, and view analytics in a simple dashboard." />
+<meta name="twitter:image" content="https://jkaystrackler.netlify.app/preview.png" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title> Trackly Home</title>
