--- a/domain-extractor.html
+++ b/domain-extractor.html
@@ -9,6 +9,8 @@
   gtag('js', new Date());
   gtag('config', 'G-F2HRNFGFXN');
 </script>
+   <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="VqC6EhdAZWPPR-wuTA7CX-WJeOP1DcoMZTGvwCOrX4E" />
 <!-- End Google Analytics -->
 <meta name="description" content="Trackly helps you extract domains, track link clicks, and view analytics in a simple dashboard. Fast, free, and easy to use." />
   <meta name="author" content="Trackly" />
