--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
   </style>
 </head>
 <body>
+<!-- Hidden links for sitemap discovery -->
+<nav style="display:none">
+  <a href="/domain-extractor.html">Domain Extractor</a>
+  <a href="/analytics.html">Analytics Dashboard</a>
+</nav>
 <header>🚀 Link Tracker — Pill View</header>
 
 <div class="wrapper">
